force-app/main/default/objects/copado__Environment__c/fields/copado__CommitJobTemplateOverride__c.field-meta.xml
<CustomField>
    <fullName>copado__CommitJobTemplateOverride__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select a Job Template to override the default Commit Job Template defined in the Pipeline</description>
    <inlineHelpText>Select a Job Template to override the default Commit Job Template defined in the Pipeline</inlineHelpText>
    <label>Commit Job Template Override</label>
    <referenceTo>copado__JobTemplate__c</referenceTo>
    <relationshipLabel>Environments (Commit Job Template Override)</relationshipLabel>
    <relationshipName>Environments2</relationshipName>
    <type>Lookup</type>
</CustomField>