force-app/main/default/objects/copado__Environment__c/fields/copado__Promotion_Job_Template_Override__c.field-meta.xml
<CustomField>
    <fullName>copado__Promotion_Job_Template_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Job Template Override</label>
    <referenceTo>copado__JobTemplate__c</referenceTo>
    <relationshipLabel>Environments</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>