force-app/main/default/objects/copado__Environment__c/validationRules/copado__Unique_Job_Template.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Unique_Job_Template</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
NOT(ISBLANK(copado__CommitJobTemplateOverride__c)),
OR(
copado__CommitJobTemplateOverride__c == copado__Deployment_Job_Template_Override__c,
copado__CommitJobTemplateOverride__c == copado__Promotion_Job_Template_Override__c
)),
AND(
NOT(ISBLANK(copado__Promotion_Job_Template_Override__c)),
OR(
copado__Promotion_Job_Template_Override__c == copado__Deployment_Job_Template_Override__c,
copado__Promotion_Job_Template_Override__c == copado__CommitJobTemplateOverride__c
)),
AND(
NOT(ISBLANK(copado__Deployment_Job_Template_Override__c)),
OR(
copado__Deployment_Job_Template_Override__c == copado__Promotion_Job_Template_Override__c,
copado__Deployment_Job_Template_Override__c == copado__CommitJobTemplateOverride__c
))
)</errorConditionFormula>
    <errorMessage>An environment cannot have the same job template for Commit, Promote and Deploy.</errorMessage>
</ValidationRule>